kubernetes/apps/networking/external/torrent/endpoints.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: &app qbittorrent
  namespace: networking
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
subsets:
  - addresses:
      - ip: ${NFS_SERVER}
    ports:
      - port: 8080
        name: http
