kubernetes/apps/networking/external/torrent/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app qbittorrent
  namespace: networking
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  ports:
    - name: http
      port: &port 8080
      protocol: TCP
      targetPort: *port
